change to new repo (v1)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reveal-seg",
-  "homepage": "https://zennomi.github.io/Seg-Mirror",
+  "homepage": "https://zennomi.github.io/Seg-Mirror-V1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
